# Speech-to-Text-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routes/: stream.py  transcribe.py
config/: default.yaml
src/: config.py
src/audio/: capture.py  file_loader.py  preprocessor.py
src/evaluation/: benchmark.py  metrics.py
src/transcription/: postprocessor.py  transcriber.py
tests/: conftest.py
tests/unit/: test_config.py  test_metrics.py  test_postprocessor.py  test_preprocessor.py
