[project]
name = "speech-to-text"
version = "1.0.0"
description = "Real-time speech-to-text pipeline with Whisper"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
